dont add position fixed to togge to prevent it from overlapping content and possibly rendering buttons unclickable

--- a/core/css/mobile.css
+++ b/core/css/mobile.css
@@ -100,7 +100,6 @@
 }
 
 #app-navigation-toggle {
-	position: fixed;
 	display: inline-block !important;
 	top: 45px;
 	left: 0;
